syntax = "proto3";

package deployments;

message Deployment {
  string id = 1;
  string repoName = 2;
  string repoUrl = 3;
  string status = 4;
  string outDir = 5;
  string runCommand = 6;
  string buildCommand = 7;
  string userId = 8;
  int32 createdAt = 9;
  int32 updatedAt = 10;
  string type = 11;
  string instanceType = 12;
  string deploymentUrl = 13;
  string githubAccessToken = 14;
}

service DeploymentsService {
  // rpc CreateWebService(CreateWebServiceDto) returns (Deployment) {}

  rpc CreateDeployment(CreateStaticSiteDto) returns (Deployment) {}
  // rpc CreateStaticSite(CreateStaticSiteDto) returns (Deployment) {}
  // rpc CreateImageDeployment(CreateImageDeploymentDto) returns (Deployment) {}
  rpc GetDeployment(GetDeploymentDto) returns (Deployment) {}
  rpc GetUsersDeployments(GetUsersDeploymentsDto) returns (Deployments) {}
}

message GetUsersDeploymentsDto {
  string userId = 1;
}

message CreateDeploymentDto {
  optional string githubAccessToken = 1;
  optional string repoName = 2;
  string repoUrl = 3;
  optional string outDir = 5;
  optional string runCommand = 6;
  optional string buildCommand = 7;
  string userId = 8;
  int32 createdAt = 9;
  int32 updatedAt = 10;
  string type = 11;
  optional string instanceType = 12;
}

message Deployments {
  repeated Deployment deployments = 1;
}
message CreateStaticSiteDto {
  string url = 2;
  string userId = 3;
  optional string outDir = 4;
  string runCommand = 5;
  optional string buildCommand = 6;
  map<string,string> envs = 8;
}

message CreateWebServiceDto {
  string url = 2;
  string userId = 3;
  optional string outDir = 4;
  string runCommand = 5;
  optional string buildCommand = 6;
  string instanceType = 7;
  map<string,string> envs = 8;
}

message CreateImageDeploymentDto {
  string url = 2;
  string userId = 3;
  optional string outDir = 4;
  string runCommand = 5;
  optional string buildCommand = 6;
  string instanceType = 7;

}

message GetDeploymentDto { string id = 1; }
